# ai-dinner-planner

./: .dockerignore  .env.exmaple  .gitignore  Dockerfile  Dockerfile.agent  README.md  pyproject.toml
.github/: copilot-instructions.md
agent/: __init__.py  hosted_agent.py  server.py
agent/evaluation/: __init__.py  dataset.jsonl  run_foundry_evaluation.py  simulation_scenarios.jsonl
app/: __init__.py  config.py  foundry_client.py  local_chat.py  main.py  menu_models.py  menu_repository.py
data/: menu.example.json
docs/: deployment.md  evaluation.md  spec.md
infra/: main.bicep
infra/modules/: app.bicep
scripts/: configure_container_app_auth.py  deploy_hosted_agent_version.py  list_hosted_agent_versions.py  seed_cosmos.py
static/: app.js  index.html  styles.css
